<resources>
    <string name="app_name">Piggy</string>
    <string name="welcome1.1">Welcome to Piggy</string>
    <string name="welcome1.2">Manage your finance easily with Piggy and get to know about your financial status.</string>
    <string name="welcome2.1">Add Income &amp; Expense</string>
    <string name="welcome2.2">1. Press the + button to add a record.\n2. Click on the record to view details.\n3. Long click on the record to update.</string>
    <string name="welcome3">Let\'s Get Started!</string>
    <string name="signin">Login</string>
    <string name="asksignup">Don\'t have any account? Sign Up</string>
    <string name="asklogin">Already have an account? Sign In</string>
    <string name="uname">Username</string>
    <string name="email">Email</string>
    <string name="pswd">Password</string>
    <string name="rePswd">Re-Password</string>
    <string name="forgotPassword">Forgot Password ?</string>

    <string name="enterName">Enter Your Name</string>
    <string name="enterPswd">Enter Your Password</string>
    <string name="enterRePswd">Re Enter Your Password</string>
    <string name="enterEmail">Enter Your Email</string>

    <string name="signup">Sign Up</string>
    <string name="home">Home</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="statistic">Statistic</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="catName">Category Name</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="memo">Memo</string>
    <string name="image">Image</string>
    <string name="title_activity_update_record">UpdateRecord</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>