<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/nav_income"
        android:icon="@drawable/ic_nav_income"
        android:title="@string/income" />

    <item
        android:id="@+id/nav_expenses"
        android:icon="@drawable/ic_nav_expenses"
        android:title="@string/expenses" />

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/home" />

    <item
        android:icon="@drawable/ic_nav_statistic"
        android:id="@+id/nav_statistic"
        android:title="@string/statistic" />

    <item
        android:icon="@drawable/ic_nav_profile"
        android:id="@+id/nav_profile"
        android:title="@string/profile" />

</menu>