<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    tools:context=".AddIncome">

    // back button
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    // add income text
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Add Income"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    // logo
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_piggy_logo_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/login_bg"
        app:layout_constraintTop_toTopOf="parent">

        // income category name
        <TextView
            android:id="@+id/income_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="@string/catName"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        // income amount
        <EditText
            android:id="@+id/incomeAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/income_category_name"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/amount"
            android:textColor="@color/black"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_nav_income"
            android:background="@drawable/fill_info_bg"/>

        // income date
        <EditText
            android:id="@+id/incomeDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/incomeAmount"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/date"
            android:textColor="@color/black"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_date"
            android:background="@drawable/fill_info_bg"/>

        // income memo
        <EditText
            android:id="@+id/incomeMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/incomeDate"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:ems="10"
            android:inputType="textImeMultiLine"
            android:hint="@string/memo"
            android:textColor="@color/black"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_memo"
            android:background="@drawable/fill_info_bg"/>

        // income image
        <EditText
            android:id="@+id/incomeImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/incomeMemo"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/image"
            android:textColor="@color/black"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_image"
            android:background="@drawable/fill_info_bg"/>

        // add button
        <Button
            android:id="@+id/add_buttton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/incomeImg"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="@string/add"
            android:textSize="18dp"
            android:background="@drawable/skip_button_bg"
            app:backgroundTint="@color/gold"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>