<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    tools:context=".UpdateRecord">

    // back button
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    // update details text
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Update Details"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    // category img
    <ImageView
        android:id="@+id/category_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        android:src="@mipmap/ic_piggy_logo_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"/>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:background="@drawable/login_bg"
        app:layout_constraintTop_toTopOf="parent">

        // category name
        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/catName"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        // currency
        <RelativeLayout
            android:id="@+id/currency"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/category_name"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/fill_info_bg">

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingRight="5dp"
                android:src="@drawable/ic_down"/>

        </RelativeLayout>

        // amount
        <EditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/currency"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/fill_info_bg"
            android:drawableLeft="@drawable/ic_nav_income"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textColor="@color/black"/>

        // date
        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/amount"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:ems="10"
            android:inputType="date"
            android:focusable="false"
            android:hint="@string/date"
            android:textColor="@color/black"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_date"
            android:background="@drawable/fill_info_bg"/>

        // memo
        <EditText
            android:id="@+id/memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/fill_info_bg"
            android:drawableLeft="@drawable/ic_memo"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/memo"
            android:inputType="textImeMultiLine"
            android:padding="10dp"
            android:textColor="@color/black"/>

        // image
        <EditText
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/memo"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/fill_info_bg"
            android:drawableLeft="@drawable/ic_image"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/image"
            android:inputType="none"
            android:padding="10dp"
            android:textColor="@color/black"
            android:focusable="false"/>

        // update button
        <Button
            android:id="@+id/update_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="70dp"
            android:background="@drawable/skip_button_bg"
            android:text="update"
            android:textSize="18dp"
            app:backgroundTint="@color/gold"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>